# yanframework

./: .gitignore  CMakeLists.txt  README.md  compile_flags.txt
examples/: mps_benchmark.mm  tensor_test.cpp  xor_example.cpp
include/: NN.h  Tensor.h
src/: NN.cpp  Tensor.cpp
src/cuda/: CudaContext.h  kernels.cu
src/metal/: MetalContext.cpp  MetalContext.h  kernels.metal
